Fix spacing around svg

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -245,3 +245,7 @@ footer {
     display: block; 
   }
 }
+
+.navbar{
+  margin-bottom: 0;
+}
